[package]
name = "glit"
version = "1.2.0"
edition = "2024"
description = "Interactive git log viewer with fuzzy search and diff preview"
authors = ["Timur Satymbayev <satymbayevt@gmail.com>"]
repository = "https://github.com/bytewx/glit"
keywords = ["git", "tui", "cli", "log"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
ratatui = "0.30.2"
arboard = "3"